<resources>

    <string name="app_name">Language Quiz</string>

    <string name="test_quiz_string2">When we go for an interview.</string>
    <string name="test_quiz_title">Когда мы идем на интервью, большинство из нас думают [внимательно] о том, что одеть и что говорить, но едва ли о том, как себя вести, другими словами - что наш язык тела говорит интервьюеру.</string>
    <string name="topic_cover_image">Topic cover image</string>
    <string name="btn_prev">previous</string>
    <string name="btn_next">next</string>
    <string name="btn_check_quiz">Check</string>
    <string name="dummy_title">Title</string>
    <string name="dummy_subtitle">Subtitle</string>
    <string name="img_desc_pin_icon">Topic pin to widget image</string>
    <string name="dummy_topic_description">Description</string>
    <string name="btn_read">Read</string>
    <string name="btn_quiz">Quiz</string>
    <string name="label_choose_difficulty">Choose difficulty</string>
    <string name="text_hint">Text hint</string>
    <string name="transition_name_topic_cover">iv_trans_name</string>
    <string name="widget_tap_to_update">Tap to update widget</string>

</resources>
