<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        style="@style/AppTheme.ActionBar"
        android:layout_height="@dimen/dimen_details_appbar_height">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:transitionName="@string/transition_name_topic_cover"
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@android:drawable/sym_def_app_icon"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/topic_cover_image" />

            <View
                android:background="@drawable/appbar_tint"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/AppTheme.Toolbar"
                app:titleTextAppearance="@style/AppTheme.TopicTitleDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:title="@string/app_name">
            </android.support.v7.widget.Toolbar>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/topic_details_body" />

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>